# game

./: .gitignore  CMakeLists.txt  CREDITS.txt  Dockerfile  Makefile  README.md  docker_export.sh  docker_run.sh  save.yaml  server_run.sh
include/: delta_timer.hpp  game.hpp  game_object.hpp  map.hpp  player.hpp  resource_loader.hpp  script.hpp  synced.hpp  test.hpp  transform.hpp
include/engine/: component.hpp  game_object.hpp  scene.hpp  script.hpp  synced.hpp  window_manager.hpp
include/game/: animation.hpp  attack_simulator.hpp  game.hpp  lobby.hpp  map.hpp  map_manipulator.hpp  movement.hpp  movement_animation.hpp  movement_manager.hpp  player.hpp  spaceship_part.hpp  teams.hpp  tile.hpp  tile_display_mode.hpp  tile_index.hpp  tile_selector.hpp  unit.hpp  unit_names.hpp  visualization_mode.hpp
include/helper/: delta_timer.hpp  resource_loader.hpp
include/network/: client.hpp  client_info.hpp  datagram.hpp  network_interface.hpp  network_manager.hpp  packet_list_element.hpp  rpc.hpp  server.hpp  synced.hpp
include/scenes/: battle.hpp  editor.hpp  game.hpp  lobby.hpp  menu.hpp  scene.hpp
include/ui/: action_menu.hpp  attack_info.hpp  button.hpp  endcard.hpp  gif.hpp  header.hpp  input_field.hpp  layout.hpp  panel.hpp  parts_menu.hpp  shopping_menu.hpp  (+2 more)
proposal/: proposal.md
scripts/: convert_gif_to_animation.bash  download_unit_animations.bash  generate_image_from_awbw_map.py  generate_txt_from_image.py
src/: client_main.cpp  component.cpp  game.cpp  generator_main.cpp  player.cpp  script.cpp  server_main.cpp  synced.cpp  window_manager.cpp
(+144 files in other folders)
